[package]
name = "saison"
version = "0.1.0"
authors = ["Ryo Sugimoto <sugryo1109@gmail.com>"]

[dependencies]
encoding = "0.2"
hyper = "0.9"
url = "1.2"
scraper = "0.4"
nickel = "0.9"
chrono = "0.2"
rustc-serialize = "0.3"
regex = "0.1"
clap = "2.19"
modifier = "0.1"
slog = "1.2"
slog-term = "1.3"
slog-stream = "1.2"
slog-json = "1.2"
slog-stdlog = "1.1"
log = "0.3"
